# lib/manager.js
@@ -40,6 +40,7 @@ const lpm_config = require('../util/lpm_config.js');
 const is_win = process.platform=='win32';
 const is_darwin = process.platform=='darwin';
 const stringify = require('json-stable-stringify');
+const cookie = require('cookie');
 const cookie_filestore = require('tough-cookie-file-store');
 const check_node_version = require('check-node-version');
 const cities = require('./cities.js');
@@ -365,8 +366,8 @@ E.prototype.get_consts_api = function(req, res){
         .map(z=>Object.assign({key: z.zone, value: z.zone, plans: []}, z));
     zones.unshift({key: `Default (${proxy.zone.def})`, value: ''});
     proxy.zone.values = zones;
-    const notifs = this.lum_conf.lpm_notifs||[];
-    const logins = this.lum_conf.logins||[];
+    const notifs = this.lum_conf && this.lum_conf.lpm_notifs || [];
+    const logins = this.lum_conf && this.lum_conf.logins || [];
     res.json({proxy, notifs, logins});
 };
 
@@ -393,7 +394,7 @@ function*mgr_update_ips(_this, req, res){
 
 E.prototype.update_notifs_api = etask._fn(
 function*mgr_update_notif(_this, req, res){
-    _this.lum_conf.lpm_notifs = _this.lum_conf.lpm_notifs||[];
+    _this.lum_conf.lpm_notifs = _this.lum_conf.lpm_notifs || [];
     const notifs = req.body.notifs;
     notifs.forEach(updated_notif=>{
         const stored_notif = _this.lum_conf.lpm_notifs.find(
@@ -433,10 +434,11 @@ function*mgr_send_rule_mail(_this, port, to, _url){
     +`you can turn it off here: `
     +`http://127.0.0.1:${_this.opts.www}/proxy/${port}/rules\n\n`
     +`Luminati`;
+    const {customer, token} = _this._defaults;
     const response = yield etask.nfn_apply(request, [{
         method: 'POST',
         url: `${_this._defaults.api}/send_rule_mail`,
-        qs: Object.assign(_.pick(_this._defaults, qw`customer token`)),
+        qs: {customer, token},
         jar,
         json: true,
         headers: {'X-XSRF-Token': xsrf},
@@ -1374,7 +1376,6 @@ E.prototype.get_settings = function(){
         whitelist_ips: this._defaults.whitelist_ips,
         config: this.argv.config,
         resolve: this._defaults.resolve,
-        argv: this.get_params().join(' '),
         test_url: this._defaults.test_url,
         api: this._defaults.api,
         mail_domain: pkg.mail_domain,
@@ -1429,8 +1430,7 @@ E.prototype.config_set_api = function(req, res){
     this.emit('config_changed');
 };
 
-E.prototype.creds_user_set_api = etask._fn(
-function*mgr_creds_user_set(_this, req, res){
+E.prototype.creds_user_api = etask._fn(function*mgr_creds(_this, req, res){
     const remote_ip = req.ip;
     const config = yield _this.login_user(req.body.token,
         req.body.username, req.body.password,
@@ -1446,7 +1446,7 @@ function*mgr_creds_user_set(_this, req, res){
         return;
     }
     Object.assign(_this._defaults, config.defaults);
-    let wips = _this._defaults.whitelist_ips||[];
+    const wips = _this._defaults.whitelist_ips || [];
     if (!wips.length && remote_ip!='127.0.0.1')
     {
         _this._defaults.whitelist_ips = [remote_ip];
@@ -1456,6 +1456,8 @@ function*mgr_creds_user_set(_this, req, res){
     yield _this.logged_update();
     yield _this.sync_recent_stats();
     yield _this.sync_config_file();
+    if (_this._defaults.password)
+        res.cookie('local-login', _this._defaults.password);
     res.json({result: 'ok'});
 });
 
@@ -1596,6 +1598,7 @@ E.prototype.logout = etask._fn(function*mgr_logout(_this){
 
 E.prototype.logout_api = etask._fn(function*mgr_logout_api(_this, req, res){
     yield _this.logout();
+    res.cookie('local-login', '');
     res.json({result: 'ok'});
 });
 
@@ -1718,18 +1721,21 @@ E.prototype.add_wip_api = etask._fn(function*(_this, req, res){
 });
 
 E.prototype.authenticate = function(req, res, next){
-    // XXX krzysztof: copied from another place, simplify it
-    const _defaults = Object.assign({}, _.pick(E.default,
-        lpm_config.default_fields));
-    const whitelist_blocks = (_defaults.www_whitelist_ips||[])
-    .concat(this._defaults.www_whitelist_ips)
-    .concat(this.mgr_opts.www_whitelist_ips||[], '127.0.0.1')
-    .map(wl=>{ try { return new Netmask(wl); } catch(e){} })
-    .filter(wl=>!!wl);
-    const is_whitelisted_ip = (whitelist_blocks||[]).some(wb=>{
-        try { return wb.contains(req.ip); } catch(e){ return false; }
+    const whitelist_blocks = [
+        ...this._defaults.www_whitelist_ips,
+        ...this.mgr_opts.www_whitelist_ips,
+        '127.0.0.1',
+    ].map(wl=>{
+        try {
+            return new Netmask(wl);
+        } catch(e){}
+    }).filter(Boolean);
+    const is_whitelisted = whitelist_blocks.some(wb=>{
+        try {
+            return wb.contains(req.ip);
+        } catch(e){ return false; }
     });
-    if (!is_whitelisted_ip && !['/version', '/add_wip'].includes(req.url))
+    if (!is_whitelisted && !['/version', '/add_wip'].includes(req.url))
     {
         res.status(403);
         res.set('x-lpm-block-ip', req.ip);
@@ -1737,6 +1743,20 @@ E.prototype.authenticate = function(req, res, next){
             +` want to access this site ask the administrator to add`
             +` ${req.ip} to the whitelist. for more info visit`
             +` https://luminati.io/faq#lpm_whitelist_admin`);
+    }
+    const cookies = cookie.parse(req.headers.cookie||'');
+    const passwd = Array.isArray(this._defaults.password) ?
+        this._defaults.password[0] : this._defaults.password;
+    const is_local_authenticated = !this.argv.local_login ||
+        passwd && cookies['local-login']==passwd;
+    if (!is_local_authenticated && !['/version', '/creds_user', '/defaults',
+        '/node_version', '/last_version', '/conn', '/all_locations',
+        '/last_version'].includes(req.url))
+    {
+        res.status(403);
+        res.set('x-lpm-local-login', 'Unauthorized');
+        return void res.send('This LPM instance is running in local_login'
+            +' mode. You need to log in to get an access to this resource');
     }
     req.init_json_stream = ()=>{
         const readable = new stream.Readable({objectMode: true});
@@ -1754,10 +1774,11 @@ E.prototype._api = function(f){
             if (this.error)
             {
                 _this._log.warn('API error: %s %s %s', req.method,
-                        req.originalUrl, zerr.e2s(this.error));
+                    req.originalUrl, zerr.e2s(this.error));
                 return next(this.error);
             }
         });
+        // XXX krzysztof: to check and remove. it does nothing?
         const json = res.json.bind(res);
         res.json = o=>json(o);
         yield f.call(_this, req, res, next);
@@ -1771,7 +1792,7 @@ E.prototype.create_api_interface = function(){
     app.get('/consts', this._api(this.get_consts_api));
     app.get('/defaults', this._api((req, res)=>res.json(this.opts)));
     app.get('/version', this._api((req, res)=>res.json(
-        {version: pkg.version})));
+        {version: pkg.version, argv: this.get_params().join(' ')})));
     app.get('/last_version', this._api(this.last_version_api));
     app.get('/node_version', this._api(this.node_version_api));
     app.get('/mode', this._api((req, res)=>
@@ -1810,7 +1831,7 @@ E.prototype.create_api_interface = function(){
     app.get('/logs_reset', this._api(this.logs_reset_api));
     app.get('/settings', this._api((req, res)=>res.json(this.get_settings())));
     app.put('/settings', this._api(this.update_settings_api));
-    app.post('/creds_user', this._api(this.creds_user_set_api));
+    app.post('/creds_user', this._api(this.creds_user_api));
     app.get('/gen_token', this._api(this.gen_token_api));
     app.get('/config', this._api(this.config_get_api));
     app.post('/config', this._api(this.config_set_api));
@@ -1930,7 +1951,7 @@ E.prototype.logged_update = etask._fn(function*mgr_logged_update(_this){
     }
 });
 
-E.prototype._get_cookie_jar = function(){
+E.prototype.get_cookie_jar = function(){
     const jarpath = this.argv.cookie;
     if (!jarpath)
         return cookie_jar = cookie_jar||request.jar();
@@ -1948,18 +1969,18 @@ E.prototype._get_cookie_jar = function(){
 
 E.prototype.get_lum_local_conf = etask._fn(
 function*mgr_get_lum_local_conf(_this, customer, token, force_login){
-    customer = customer||_this._defaults.customer;
-    token = token||_this._defaults.token;
+    customer = customer || _this._defaults.customer;
+    token = token || _this._defaults.token;
     if (!_this.lum_conf)
-        _this.lum_conf = {ts: 0};
+        _this.lum_conf = {};
     if (_this.use_local_lum_conf && !force_login)
         return _this.lum_conf;
     if (!_this.luminati_jar)
-        _this.luminati_jar = {jar: _this._get_cookie_jar()};
-    let cookie = !!token ||
+        _this.luminati_jar = {jar: _this.get_cookie_jar()};
+    const _cookie = !!token ||
         (_this.luminati_jar.jar.getCookies(_this._defaults.api)||[])
         .some(c=>c && c.value && c.expires>=Date.now());
-    if (!cookie)
+    if (!_cookie)
     {
         if (!force_login)
             return (_this.use_local_lum_conf = true) && _this.lum_conf;
@@ -1993,7 +2014,7 @@ function*mgr_get_lum_local_conf(_this, customer, token, force_login){
         throw {status: config.statusCode, message: config.body};
     }
     _this.use_local_lum_conf = false;
-    let hash = _this.lum_conf && _this.lum_conf.hash;
+    const hash = _this.lum_conf && _this.lum_conf.hash;
     _this.lum_conf = JSON.parse(config.body);
     _this.lum_conf.hash = _this.lum_conf._defaults && crypto.createHash('md5')
         .update(stringify(_this.lum_conf._defaults)).digest('hex');
@@ -2053,7 +2074,8 @@ function*mgr_fix_config(_this, new_conf){
 
 E.prototype.login_user = etask._fn(
 function*mgr_login_user(_this, token, username, password, customer){
-    let config, login_failed;
+    let config;
+    let login_failed;
     try { config = yield _this.get_lum_local_conf(customer, token, true); }
     catch(e){
         if (!e.status)
@@ -2067,8 +2089,8 @@ function*mgr_login_user(_this, token, username, password, customer){
         const jar = _this.luminati_jar.jar;
         yield etask.nfn_apply(request, [{url: _this._defaults.api, jar: jar}]);
         const xsrf = jar.getCookies(_this._defaults.api)
-        .find(e=>e.key=='XSRF-TOKEN')||{};
-        let response = yield etask.nfn_apply(request, [{
+            .find(e=>e.key=='XSRF-TOKEN')||{};
+        const response = yield etask.nfn_apply(request, [{
             method: 'POST',
             url: `${_this._defaults.api}/users/auth/basic/check_credentials`,
             jar,
@@ -2170,7 +2192,7 @@ E.prototype.get_ip = etask._fn(function*mgr_set_location(_this){
 });
 
 E.prototype.check_domain = etask._fn(function*mgr_check_domain(_this){
-    const jar = _this._get_cookie_jar();
+    const jar = _this.get_cookie_jar();
     const _url = `${_this._defaults.api}/lpm_config.json?ver=${pkg.version}`;
     try {
         const res = yield etask.nfn_apply(request, [{
